--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.jvmargs=-Xmx1536m
+#org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005
 org.gradle.parallel=true
 
 # Kotlin code style for this project: "official" or "obsolete":
