--- a/plugin-build/gradle.properties
+++ b/plugin-build/gradle.properties
@@ -1,8 +1,8 @@
-ID=com.ncorti.kotlin.gradle.template.plugin
+ID=io.github.arrow.gen.plugin
 VERSION=1.0.0
-GROUP=com.ncorti.kotlin.gradle.template
-DISPLAY_NAME=An empty Gradle Plugin from a template
-DESCRIPTION=An empty Gradle plugin created from a template
-WEBSITE=https://github.com/cortinico/kotlin-gradle-plugin-template
-VCS_URL=https://github.com/cortinico/kotlin-gradle-plugin-template
-IMPLEMENTATION_CLASS=com.ncorti.kotlin.gradle.template.plugin.TemplatePlugin
+GROUP=io.github.arrow.gen
+DISPLAY_NAME=Arrow Extension Function Generator
+DESCRIPTION=A Gradle plugin that generates Arrow extension functions for specified APIs
+WEBSITE=https://github.com/arrow-kt/arrow-gen
+VCS_URL=https://github.com/arrow-kt/arrow-gen
+IMPLEMENTATION_CLASS=io.github.arrow.gen.plugin.ArrowGenPlugin
