--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,21 +5,26 @@ ktlintGradle = "12.3.0"
 pluginPublish = "1.3.1"
 versionCheck = "0.52.0"
 ksp = "2.1.21-2.0.1"
+ksp-gradle = "1.5.30-1.0.0"
 arrow = "2.1.2"
 kotlinpoet = "2.2.0"
+nexusPublish = "2.0.0"
 
 [plugins]
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt"}
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin"}
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlintGradle"}
 pluginPublish = { id = "com.gradle.plugin-publish", version.ref = "pluginPublish"}
+nexusPublish = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "nexusPublish"}
 versionCheck = { id = "com.github.ben-manes.versions", version.ref = "versionCheck"}
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
 
 [libraries]
 junit = "junit:junit:4.13.2"
+
 ksp-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
 ksp-plugin = { module = "com.google.devtools.ksp:symbol-processing", version.ref = "ksp" }
+ksp-gradle = { module = "com.google.devtools.ksp:symbol-processing-gradle-plugin", version.ref = "ksp-gradle" }
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
 arrow-fx-coroutines = { module = "io.arrow-kt:arrow-fx-coroutines", version.ref = "arrow" }
 kotlinpoet = { module = "com.squareup:kotlinpoet", version.ref = "kotlinpoet" }
