--- a/plugin-build/gradle.properties
+++ b/plugin-build/gradle.properties
@@ -1,8 +1,8 @@
-ID=io.github.arrow.gen.plugin
+ID=io.github.fpiechowski.arrowgen.plugin
 VERSION=1.0.0
-GROUP=io.github.arrow.gen
+GROUP=io.github.fpiechowski.arrowgen
 DISPLAY_NAME=Arrow Extension Function Generator
 DESCRIPTION=A Gradle plugin that generates Arrow extension functions for specified APIs
 WEBSITE=https://github.com/arrow-kt/arrow-gen
 VCS_URL=https://github.com/arrow-kt/arrow-gen
-IMPLEMENTATION_CLASS=io.github.arrow.gen.plugin.ArrowGenPlugin
+IMPLEMENTATION_CLASS=io.github.fpiechowski.arrowgen.plugin.ArrowGenPlugin
