Run preMerge before importing GPG key in publish processor to create `.gradle` directory

--- a/.github/workflows/publish-processor.yaml
+++ b/.github/workflows/publish-processor.yaml
@@ -21,6 +21,9 @@ jobs:
           distribution: 'temurin'
           java-version: 11
 
+      - name: Run Gradle tasks
+        run: ./gradlew preMerge --continue
+
       - name: Import GPG key
         run: |
           echo "$GPG_PRIVATE_KEY" | base64 --decode > ~/.gradle/secring.gpg
