--- a/.github/workflows/publish-processor.yaml
+++ b/.github/workflows/publish-processor.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Publish to Central
         run: ./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository --no-daemon --stacktrace
         env:
-          ORG_GRADLE_PROJECT_signing.keyId: ""
+          ORG_GRADLE_PROJECT_signing.keyId: "96827B5D7EE17040"
           ORG_GRADLE_PROJECT_signing.password: ${{ secrets.GPG_PASSPHRASE }}
           ORG_GRADLE_PROJECT_signing.secretKeyRingFile: ~/.gradle/secring.gpg
           ORG_GRADLE_PROJECT_ossrhUsername: ${{ secrets.CENTRAL_USERNAME }}
