--- a/.github/workflows/publish-processor.yaml
+++ b/.github/workflows/publish-processor.yaml
@@ -36,5 +36,5 @@ jobs:
           ORG_GRADLE_PROJECT_signing.keyId: "96827B5D7EE17040"
           ORG_GRADLE_PROJECT_signing.password: ${{ secrets.GPG_PASSPHRASE }}
           ORG_GRADLE_PROJECT_signing.secretKeyRingFile: ~/.gradle/secring.gpg
-          ORG_GRADLE_PROJECT_ossrhUsername: ${{ secrets.CENTRAL_USERNAME }}
-          ORG_GRADLE_PROJECT_ossrhPassword: ${{ secrets.CENTRAL_PASSWORD }}
+          CENTRAL_PORTAL_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
+          CENTRAL_PORTAL_PASSWORD: ${{ secrets.CENTRAL_PASSWORD }}
