Fix gradle plugin website and VCS URLs. Remove `.plugin` suffix from plugin ID

--- a/plugin-build/gradle.properties
+++ b/plugin-build/gradle.properties
@@ -1,8 +1,8 @@
-ID=io.github.fpiechowski.arrowgen.plugin
+ID=io.github.fpiechowski.arrowgen
 VERSION=0.0.1
 GROUP=io.github.fpiechowski.arrowgen
 DISPLAY_NAME=Arrow Extension Function Generator
 DESCRIPTION=A Gradle plugin that generates Arrow extension functions for specified APIs
-WEBSITE=https://github.com/arrow-kt/arrow-gen
-VCS_URL=https://github.com/arrow-kt/arrow-gen
+WEBSITE=https://github.com/fpiechowski/arrow-gen
+VCS_URL=https://github.com/fpiechowski/arrow-gen
 IMPLEMENTATION_CLASS=io.github.fpiechowski.arrowgen.plugin.ArrowGenPlugin
